[package]
name = "stereo-depth"
version = "0.1.0"
authors = ["Zak Griffin <zakgriffin1209@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.9"
show-image = "0.6.4"
rayon = "1.4.0"
num_cpus = "1.13.0"
emu_core = "0.1.1"
emu_glsl = "0.1.0"
futures = "0.3.6"